# libvideo-defs

./: .MODULE_LICENSE_BSD  CMakeLists.txt  README.md  atom.mk
include/video-defs/: vdefs.h
src/: vdefs.c  vdefs_formats.c  vdefs_json.c  vdefs_params.c
tests/: vdefs_test.c  vdefs_test.h  vdefs_test_calc.c  vdefs_test_csv.c  vdefs_test_frac.c  vdefs_test_framerate.c  vdefs_test_json.c  vdefs_test_resolution.c  vdefs_test_utils.c
